...
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp">

        <!-- EditText -->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_notification_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification_editText_hint"
            android:textColorHint="@color/thirdColor"
            app:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/color_cursor"/>
...
                android:layout_alignParentStart="true"
                android:text="@string/notification_textView"
                android:textColor="@color/mainColor"
                android:textSize="17sp" />

            <Switch
                android:id="@+id/activity_notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:theme="@style/SwitchStyle"/>
        </RelativeLayout>

...
